--- a/intranet/htdocs/intranet-tmpl/circ/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/detallePrestamos.tmpl
@@ -105,10 +105,9 @@
 
              [% PERL %]
                                   print C4::AR::Filtros::action_button(
-                                                                  button       => "btn click",
+                                                                  button       => "btn btn-info",
+                                                                  title        => '[% "Devolver" | i18n %]',
                                                                   action       => 'realizarAccion("DEVOLUCION","table_tablaPrestamos",generaDivDevolucion);',
-                                                                  icon         => "icon-edit",
-                                                                  title        => "",
                                   ) ;
               [% END %]
 
@@ -125,10 +124,9 @@
           
               [% PERL %]
                                   print C4::AR::Filtros::action_button(
-                                                                  button       => "btn click",
+                                                                  button       => "btn btn-info",
+                                                                  title        => '[% "Renovar" | i18n %]',
                                                                   action       => 'realizarAccion("RENOVACION","table_tablaPrestamos",generaDivRenovacion);',
-                                                                  icon         => "icon-refresh",
-                                                                  title        => "",
                                   ) ;
               [% END %]
 
